# playwright-universal-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: CONFIGURATION.md  INSTALLATION.md  USAGE.md
examples/: claude_desktop_config.json  docker-compose.yml  pm2.config.js
playwright_universal_mcp/: __init__.py  cli.py  server.py
scripts/: install.sh
tests/: __init__.py  test_basic.py
