[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-universal-mcp"
version = "0.1.0"
description = "Universal Playwright MCP server that works in containerized environments"
readme = "README.md"
authors = [
    {name = "Kiran J", email = "placeholder@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.25.0",
    "mcp>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/xkiranj/playwright-universal-mcp"
"Bug Tracker" = "https://github.com/xkiranj/playwright-universal-mcp/issues"

[project.scripts]
playwright-universal-mcp = "playwright_universal_mcp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]